# HiveMind

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_asteria.py
assets/diagrams/: bounded_oscillation.md
docs/: EXPERIMENT_LOG.md
experiments/data/: l1_independent_study.json  l1_isolation_study.json  temperature_anomalies.csv
experiments/exp01_default_convergence/: summary.json
experiments/exp09_real_data_source/: distilled_model.json  summary.json
hivemind_mvp/: README.md  run_2000.py  runner.py
hivemind_mvp/hivemind/: config.py  consensus.py  death.py  dream.py  fallback.py
src/: asteriamind.db  asteriamind.db-shm  asteriamind.db-wal  asteriamind.py  asteriamind_daemon.py  asteriamind_dashboard.html  asteriamind_dashboard.py  asteriamind_web.py  bench_autonomous.py  bench_autosearch.py  bench_guard.py  bench_learn_calc.py  bench_math.py  bench_mother.py  bench_multisensor.py  bench_portal.py  bench_spike.py  bench_v2.py  bench_websearch.py  dashboard_demo.json  kg_snapshot_latest.json  longterm_validation.py  runner.py  visualize.py  websearch_bridge.py
src/AsteriaMind/: active_inference.py  chinese_parser.py  cognitive_evolution.py  cognitive_interface.py  cognitive_star_map.py  command_tool.py  dream_module.py  falsification.py  knowledge.py  math_reasoner.py  memory_consolidation.py  meta_cognition.py  meta_hypothesis.py  meta_reasoning.py  mother_controller.py  skill_library.py  text_pipeline.py
src/hivemind/: __init__.py  config.py  datasource.py  energy.py  mother.py  submodule.py
src/hivemind_v2/: __init__.py  datasource.py  guard.py  (+8 more)
(+5 files in other folders)
