[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "asteriamind"
version = "2.9.0-alpha"
description = "AsteriaMind: learning-based multi-agent cognitive system (v2.9: 4-layer autonomous exploration)"
requires-python = ">=3.10"

[project.optional-dependencies]
viz = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hivemind = ["*.py"]
